[tool.poetry]
name = "rl-trajactory-grouping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pandas = "^1.5.1"
numpy = "^1.23.4"
gym = "^0.26.2"
torch = "^1.12.1"
sklearn = "^0.0"
scikit-learn = "^1.1.2"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79


[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
